--- a/modern.html
+++ b/modern.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>The Detroit Pistons</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
@@ -9,13 +9,17 @@
     <header> 
         <h1>Modern Day Pistons</h1>
         <nav>
-                <li id = "navigation"> <a href="./index.html">Home Page</a></li>
+            <ul>
+                <li> <a href="./index.html">Home Page</a></li>
                 <li id = "current"> <a href="./modern.html">Modern Day</a></li>
-                <li id = "navigation"> <a href="./retro.html">Early 2000's</a></li>
-                <li id = "navigation"> <a href="./classic.html">The Bad Boy Pistons</a></li>
+                <li> <a href="./retro.html">Early 2000's</a></li>
+                <li> <a href="./classic.html">The Bad Boy Pistons</a></li>
+            </ul>
         </nav>
     </header>
-    <a class = "skip" href="#main">Skip to main content</a>
+    <div>
+        <a class = "skip" href="#main">Skip to main content</a>
+    </div>
     <img src="images/cade2021.jpeg" alt = "Cade Cunningham" width = "200"/>
     <img src="images/logonow.png" alt = "Present Day logo" width = "200"/>
     <main>
