--- a/classic.html
+++ b/classic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>The Detroit Pistons</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
@@ -9,13 +9,17 @@
     <header> 
         <h1>The Bad Boy Pistons</h1>
         <nav>
-            <li id = "navigation"> <a href="./index.html">Home Page</a></li>
-            <li id = "navigation"> <a href="./modern.html">Modern Day</a></li>
-            <li id = "navigation"> <a href="./retro.html">Early 2000's</a></li>
+            <ul>
+            <li> <a href="./index.html">Home Page</a></li>
+            <li> <a href="./modern.html">Modern Day</a></li>
+            <li> <a href="./retro.html">Early 2000's</a></li>
             <li id = "current"> <a href="./classic.html">The Bad Boy Pistons</a></li>
+            </ul>
         </nav>
     </header>
-    <a class = "skip" href="#main">Skip to main content</a>
+    <div>
+        <a class = "skip" href="#main">Skip to main content</a>
+    </div>
     <img id = "diff" src="images/89chip.jpeg" alt = "89 championship Joe Zeke" width = "200"/>
     <img src="images/89jersey.jpeg" alt = "89 championship away jersey" width = "200"/>
     <img id = "diff" src="images/89logo.jpeg" alt = "89 logo" width = "200"/>
