--- a/retro.html
+++ b/retro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>The Detroit Pistons</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
@@ -9,13 +9,17 @@
     <header> 
         <h1>Early 2000's</h1>
         <nav>
-            <li id = "navigation"> <a href="./index.html">Home Page</a></li>
-            <li id = "navigation"> <a href="./modern.html">Modern Day</a></li>
+        <ul>
+            <li> <a href="./index.html">Home Page</a></li>
+            <li> <a href="./modern.html">Modern Day</a></li>
             <li id = "current"> <a href="./retro.html">Early 2000's</a></li>
-            <li id = "navigation"> <a href="./classic.html">The Bad Boy Pistons</a></li>
+            <li> <a href="./classic.html">The Bad Boy Pistons</a></li>
+        </ul>
         </nav>
     </header>
-    <a class = "skip" href="#main">Skip to main content</a>
+    <div>
+        <a class = "skip" href="#main">Skip to main content</a>
+    </div>
     <img id = "diff" src="images/04chip.jpg" alt = "04 chip with coach" width = "200"/>
     <img src="images/courtpalace.jpeg" alt = "Palace court floor" width = "200"/>
     <img src="images/palaceside.jpg" alt = "Palace end of basket view" width = "200"/>
